Kubernetes-Manifests-file/overlays/staging/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-staging-ingress

spec:
  ingressClassName: traefik

  rules:

  - host: vote.staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 5000


  - host: result.staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 4000
